# ironsegment-py

./: .editorconfig  .gitignore  README-LICENSE.txt  README.md  make.bat  make.sh  pyproject.toml
.github/workflows/: main.linux.py310.yml  main.linux.py311.yml  main.linux.py312.yml  main.linux.yml  main.windows.py310.yml  main.windows.py311.yml  main.windows.yml
src/ironsegment/: __init__.py  binary1.py  manifest-1.xsd  model.py  xml.py
tests/: example-0.isb  full.isb  manifest-error0.xml  manifest-error1.xml  manifest-error2.xml  manifest-error3.xml  manifest0.xml  test_binary1.py  test_model.py  test_xml.py
